fixed alignment for nav bar items

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -61,20 +61,18 @@ a {
   z-index: 999;
   width: 100%;
   height: 8vh;
-  padding: 0 20vw;
   position: fixed;
+  padding: 0 10vw;
   left:0;
   top:0;
-  /* justify-content: space-between; */
   align-items: center;
   background: transparent;
   color: #000;
-  text-align: center;
+  text-align: end;
   transition: 0.5s;
 }
 
 .nav-bar:hover {
-
   color: #fff;
   background: #FF9600;
 }
@@ -82,9 +80,9 @@ a {
 .nav-links {
   display: flex;
   position: absolute;
-  right: 0;
+  right:10vw;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .nav-link {
